--- a/static/partials/browser.html
+++ b/static/partials/browser.html
@@ -62,10 +62,23 @@
   </div>
 
   <!-- WORK ON A TABULAR VIEW -->
-  <div class="record-container" ng-repeat="record in base.records" ng-show="base.records.length">
-    <af-adm value="record" header-text="getPKValue(record)"></af-adm>
-    <div class="record-control">
-      <btn ng-click="deleteRecord($index)" class="btn">X</btn>
-    </div>
-  </div>
+  <table class="record-container record-table" ng-show="base.records.length">
+    <tr>
+      <th ng-repeat="pkField in getPKFields()" ng-bind="pkField">
+      </th>
+    </tr>
+
+    <tr ng-repeat="record in base.records">
+      <td ng-repeat="pkValue in getPKValues(record)" ng-bind="pkValue">
+      </td>
+
+      <!-- controls -->
+      <td>
+        <button class="magnify-record" ng-click="magnifyRecord($index)">View</button>
+      </td>
+      <td>
+        <button class="delete-record" ng-click="deleteRecord($index)">Delete</button>
+      </td>
+    </tr>
+  </table>
 </div> <!-- End of browser box -->
