--- a/static/partials/viewrow.html
+++ b/static/partials/viewrow.html
@@ -1,7 +1,4 @@
-
-<div ng-show="base.records.length" class="browser-box">
+<div class="browser-box">
   <button ng-click="back()">Return</button>
-  <af-table record="base.records[rowId]">
-
-  </af-table>
+  <af-adm value="record"></af-adm>
 </div>
