--- a/static/partials/datasetform.html
+++ b/static/partials/datasetform.html
@@ -45,5 +45,5 @@
     ng-click="datasetForm.createDataset()">
     Create Dataset
   </button>
-  <button class="btn btn-cancel" ng-click="$dismiss('canceled')">Cancel</button>
+  <button class="btn btn-default" ng-click="$dismiss('canceled')">Cancel</button>
 </div>
