--- a/static/partials/datatypeform.html
+++ b/static/partials/datatypeform.html
@@ -56,5 +56,5 @@
 
 <div class="modal-footer">
   <button class="btn btn-primary" ng-click="createDatatype()">Create Datatype</button>
-  <button class="btn btn-cancel" ng-click="$dismiss('Canceled')">Cancel</button>
+  <button class="btn btn-default" ng-click="$dismiss('Canceled')">Cancel</button>
 </div>
