--- a/static/partials/browser.html
+++ b/static/partials/browser.html
@@ -9,7 +9,7 @@
 
   <div class="dataset-control-bar" >
     <button class="pure-button" ng-click="loadInsertForm()">+</button>
-    
+
   </div>
 
   <!-- WORK ON A TABULAR VIEW -->
@@ -27,10 +27,10 @@
 
       <!-- controls -->
       <td>
-        <button class="btn control magnify-record" ng-click="magnifyRecord($index)">View</button>
+        <button class="btn btn-default btn-sm btn-info" ng-click="magnifyRecord($index)">View</button>
       </td>
       <td>
-        <button class="btn control delete-record" ng-click="deleteRecord($index)">Delete</button>
+        <button class="btn btn-default btn-sm btn-danger" ng-click="deleteRecord($index)">Delete</button>
       </td>
     </tr>
   </table>
