--- a/static/partials/newDataverse.html
+++ b/static/partials/newDataverse.html
@@ -1,5 +1,13 @@
-<form ng-submit="createDataverse()">
-  <label for="name">Dataverse Name</label>
-  <input type="text" name="name" ng-model="dataverseName">
-  <input type="submit" value="Create Dataverse">
-</form>
+<div class="modal-header">
+  <h3 class="modal-title">New Dataverse</h3>
+</div>
+<div class="modal-body">
+  <form>
+    <label for="name">Dataverse Name</label>
+    <input type="text" name="name" ng-model="dataverseName">
+  </form>
+</div>
+<div class="modal-footer">
+  <button ng-click="createDataverse()" class="btn btn-primary">Create</button>
+  <button ng-click="$dismiss('canceled')" class="btn btn-default">Cancel</button>
+</div>
