--- a/static/partials/insertRowForm.html
+++ b/static/partials/insertRowForm.html
@@ -5,13 +5,13 @@
   <table>
     <tr ng-repeat="field in insert.fields">
       <td class="field-name">{{ field.FieldName }} ({{field.FieldType}})</td>
-      <td><input class="insert-field" fieldtype="{{field.FieldType}}" name="{{field.FieldName}}"></td>
+      <td><af-input type="field.FieldType" class="insert-field"></td>
     </tr>
 
     <tr ng-repeat="field in insert.extraFields" class="extra-field">
       <th>{{ field.FieldName }} ({{field.FieldType}})</th>
       <td>
-        <input class="insert-field-extra" fieldtype="{{field.FieldType}}" name="{{field.FieldName}}">
+        <af-input class="insert-field-extra" type="field.FieldType">
       </td>
     </tr>
   </table>
