--- a/static/partials/browser.html
+++ b/static/partials/browser.html
@@ -8,7 +8,7 @@
   </form>
 
   <div class="dataset-control-bar" >
-    <button class="pure-button" ng-click="loadInsertForm()">+</button>
+    <button class="btn btn-primary" ng-click="loadInsertForm()">Insert</button>
 
   </div>
 
