--- a/static/partials/directives/inputs/types.html
+++ b/static/partials/directives/inputs/types.html
@@ -31,7 +31,7 @@
         <option value="record">Record</option>
         <option value="unorderedList">Unordered List</option>
         <option value="orderedList">Ordered List</option>
-        <option ng-repeat="(customType, _) in InputTypeController.getTypes()" ng-bind="customType" ng-value="customType"></option>
+        <option ng-repeat="(customType, _) in InputController.getTypes()" ng-bind="customType" ng-value="customType"></option>
       </select>
       <button type="submit" value="Add Field" ng-disabled="!InputTypeController.newFieldName || !InputTypeController.newFieldType">Add Extra Field</button>
     </fieldset>
