--- a/static/partials/query.html
+++ b/static/partials/query.html
@@ -1,16 +1,16 @@
 <div ng-if="base.currentDataverse">Using <i ng-bind="base.currentDataverse"></i>.</div>
-<form ng-submit="query.loadQuery()">
-  <div ng-if="query.history.length>0">
+<form ng-submit="QueryController.loadQuery()">
+  <div ng-if="QueryController.history.length>0">
     <b>History</b>
-    <select ng-change="query.loadHistory()" ng-model="query.oldQuery">
-      <option ng-repeat="q in query.history track by $index" ng-value="q" ng-bind="q"></option>
+    <select ng-change="QueryController.loadHistory()" ng-model="QueryController.oldQuery">
+      <option ng-repeat="q in QueryController.history track by $index" ng-value="q" ng-bind="q"></option>
     </select>
   </div>
-  <textarea ng-model="query.txt" class="query-box">
+  <textarea ng-model="QueryController.query" class="query-box">
   </textarea>
   <button class="btn btn-primary" type="submit">Query!</button>
 </form>
 
-<div class="record" ng-repeat="record in query.results">
+<div class="record" ng-repeat="record in QueryController.results">
   <af-adm value="record"></af-adm>
 </div>
